[box] update sdk